Firebase Image retrive and add done some changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Upload Image"
+        android:text="Upload a Image "
         android:layout_marginTop="20dp"
         android:layout_below="@+id/image"
         android:id="@+id/upload"></Button>
